Added projects page

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -6,7 +6,8 @@
   </head>
   <body>
     {{>header}}</br>
-    This is an about page rendered by handlebars view engine.</br>kj
+    <p> <a href="/">Home</a> </p>
+    This is an about page rendered by handlebars view engine.</br>
     <p>{{welcomeMsg}}</p>
     {{> footer}}
   </body>
