--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -2,12 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Help Page</title>
+    <title>Projects</title>
   </head>
   <body>
+    {{>header}}
     <p> <a href="/">Home</a> </p>
-    <h2>Help page.</h2>
-    This is a help page.
-
+    <h1>Projects</h1>
+    <h3>This is the Projects page.</h3>
+    {{>footer}}
   </body>
 </html>
