--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,1 +1,1 @@
-<footer>Created by Aditya Prakash. Copyright {{currentYear}} </footer>
+<footer>Created by Aditya Prakash. Copyright {{getCurrentYear}} </footer>
